@@ -400,6 +400,7 @@ Various bugfixes, small features, and a few experimental things:
 * (bug 2560) Don't show blank width/height attributes for missing size
 * Don't show bogus messages about watchlist notifications when disabled
 * Don't show old debug messages in watchlist
+* (bug 2576) Fix recording of transclusion links
 
 
 === Caveats ===
